# qee

./: README.md  console.py  dark.qss  data.csv  generate_csv.py  light.qss  main.py  main2.py  main_an.py  mkdocs.yml  pyproject.toml  settings.json  teste.py  todo.py
.data/: 202304110900_202305011720_6_ET-5061C_harmonico.csv  202304110900_202305011720_6_ET-5061C_harmonico.xls  202304110900_202305011720_6_ET-5061C_tensao.csv
.github/workflows/: ci.yml
docs/: index.md
docs/api/classes/: analysis.md  graph.md  harmonic.md  prodist.md  voltage.md
docs/api/enums/: consumer_type.md  voltage_level.md  voltage_type.md  voltage_value.md
gui/app/: __init__.py  path_frame.py  title_bar_page.py  voltage_dialog.py
gui/app/contents_frame/: __init__.py  data_table_menu.py  result.py
gui/layouts/: __init__.py
gui/styles/: global.qss
gui/themes/: dark.json  light.json
gui/types/: __init__.py
gui/utils/: __init__.py  qss.py  settings.py  theme.py
gui/widgets/: __init__.py  button.py  message.py  table.py
qee/: __init__.py  analysis.py  graphic.py  voltage.py
qee/analysis/: __init__.py  graphic.py  harmonics.py  voltage.py  voltage_imbalance.py  voltage_variation.py
qee/classes/: __init__.py  analysis.py  frequency.py  graph.py  graphic.py  harmonic.py  harmonics.py  pdf.py  power_factor.py  prodist.py  voltage.py  voltage_imbalance.py  voltage_variation.py
qee/classes/prodist/: __init__.py  drt.py  nlt.py  voltage_indicators.py  voltage_range.py
qee/constants/: prodist.py
qee/enums/: __init__.py  consumer_type.py  voltage_level.py  voltage_type.py  voltage_value.py
qee/functions/: __init__.py  calculate_percentile.py  harmonics_cols.py
qee/gui/components/: __init__.py
qee/gui/components/icon_button/: __init__.py
qee/gui/components/title/: __init__.py
qee/gui/components/voltage_dialog/: __init__.py
qee/gui/utils/: __init__.py
qee/pdf/: __init__.py
qee/prodist/: __init__.py
qee/types/: __init__.py
qee/utils/: __init__.py  center_print.py  get_file_extension.py  harmonics_cols.py
qee_/: analysis.py  drt.py  graphic.py  harmonic.py  indicators_dh.py  nlt.py  pdf.py  voltage_imbalance.py
qee_/analysis/: __init__.py  frequency.py  power_factor.py  voltage.py  voltage_variation.py
qee_/constants/: prodist.py
qee_/enums/: __init__.py  consumer_type.py  voltage_type.py  voltage_value.py
qee_/gui/: __init__.py
qee_/gui/components/: __init__.py
qee_/gui/pages/: __init__.py
qee_/gui/styles/: global.qss
qee_/gui/themes/: dark.json  light.json
qee_/gui/utils/: __init__.py
qee_/pdf/: pdf_table.py
qee_/prodist/: prodist.py  voltage_range.py
tests/: test_calculate_percentile.py  test_graphic.py  test_harmonic.py  test_prodist.py  test_voltage.py
utils/: __init__.py  console.py  grafico.tex  latex.py  model_x1.tex  model_x3.tex  report.py
(+21 files in other folders)
