[tool.poetry]
name = "qee"
version = "0.1.0"
description = ""
authors = ["Tião Nazário <tiaogogo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
xlrd = "^2.0.1"
matplotlib = "^3.7.2"
reportlab = "^4.0.4"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
mypy = "^1.5.0"
pylint = "^2.17.5"
isort = "^5.12.0"
taskipy = "^1.12.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
matplotlib-stubs = "^0.1.0"
pandas-stubs = "^2.0.3.230814"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.21"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.init_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[mypy]
plugins = "enum"
strict_enum_order = "True"

[tool.taskipy.tasks]
format = "blue . && isort . && mypy ."
lint = "blue --check --diff . && isort --check --diff . && mypy ."
docs = "mkdocs serve"
pre_test = "task format"
test = "pytest -s -x --cov=qee -vv"
post_test = "coverage html"
