[tool.poetry]
name = "Qualidade de Energia Elétrica (QEE)"
version = "1.0.0"
description = "Criação de uma rotina em Python com interface gráfica para caracterização da Qualidade de Energia Elétrica de uma unidade consumidora."
authors = ["Sebastião Nazário <tiaogogo@gmail.com>"]
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/tiaonazario/qee"

[tool.poetry.dependencies]
python = ">=3.8,>=3.9,<3.13"
pandas = "^2.0.3"
xlrd = "^2.0.1"
matplotlib = "^3.7.2"
reportlab = "^4.0.4"
tabulate = "^0.9.0"
pyside6 = "^6.5.2"
dateparser = "^1.1.8"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
mypy = "^1.5.0"
pylint = "^2.17.5"
isort = "^5.12.0"
taskipy = "^1.12.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.types.dependencies]
pyside6-stubs = "^6.4.2.0"
matplotlib-stubs = "^0.1.0"
pandas-stubs = "^2.0.3.230814"
reportlab-stubs = "^3.6.9.post0"
types-tabulate = "^0.9.0.3"
types-toml = "^0.10.8.7"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.21"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.init_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[mypy]
plugins = "enum"
strict_enum_order = "True"

[tool.taskipy.tasks]
format = "blue . && isort . && mypy ."
lint = "blue --check --diff . && isort --check --diff . && mypy ."
docs = "mkdocs serve"
pre_test = "task format"
test = "pytest -s -x --cov=qee -vv"
post_test = "coverage html"
